# tirai-sdk

./: .gitignore  .replit  LICENSE  MAINTAINING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/: aws_claude_example.py  basic_usage.py
src/TIRAI/: __init__.py
src/TIRAI/sdk/: __init__.py  base.py  config.py
src/TIRAI/sdk/providers/: __init__.py  awsclaude.py  azureopenai.py  deepseek.py  openai.py  xai.py
tests/: test_sdk.py
